--- a/pack.yaml
+++ b/pack.yaml
@@ -6,5 +6,5 @@ keywords:
   - ticket management
   - project management
 version : 0.3.0
-author : st2-dev
+author : StackStorm, Inc.
 email : info@stackstorm.com
