Update runner_type from run-python to python-script

--- a/actions/create_issue.yaml
+++ b/actions/create_issue.yaml
@@ -1,6 +1,6 @@
 ---
 name: create_issue
-runner_type: run-python
+runner_type: python-script
 description: Create a new JIRA issue / ticket.
 enabled: true
 entry_point: create_issue.py
