--- a/actions/comment_issue.yaml
+++ b/actions/comment_issue.yaml
@@ -1,6 +1,6 @@
 ---
 name: comment_issue
-runner_type: run-python
+runner_type: python-script
 description: Comment on a JIRA issue / ticket.
 enabled: true
 entry_point: comment_issue.py
