--- a/actions/get_issue.yaml
+++ b/actions/get_issue.yaml
@@ -19,3 +19,8 @@ parameters:
     description: True to include issue attachments.
     required: true
     default: false
+  include_customfields:
+    type: boolean
+    description: True to include custom fields.
+    required: true
+    default: false
