Adding support for basic authentication

--- a/jira.yaml.example
+++ b/jira.yaml.example
@@ -1,6 +1,7 @@
 ---
   url: "https://company.atlassian.net"
   rsa_cert_file: "/home/vagrant/jira.pem"
+  auth_method: "oauth"
   oauth_token: ""
   oauth_secret: ""
   consumer_key: ""
