Added profiles to all actions

--- a/actions/attach_file_to_issue.yaml
+++ b/actions/attach_file_to_issue.yaml
@@ -17,3 +17,7 @@ parameters:
     type: string
     description: Issue key (e.g. PROJECT-1000).
     required: true
+  config_profile:
+    type: string
+    description: Select which jira config profile to use.
+    required: false        
