--- a/actions/get_issue_attachments.yaml
+++ b/actions/get_issue_attachments.yaml
@@ -9,3 +9,8 @@ parameters:
     type: string
     description: Issue key (e.g. PROJECT-1000).
     required: true
+  config_profile:
+    type: string
+    description: Select which jira config profile to use.
+    required: false    
+
