--- a/pack.yaml
+++ b/pack.yaml
@@ -1,11 +1,11 @@
 ---
 ref: jira
 name : jira
-description : st2 content pack containing jira integrations
+description : Jira integrations
 keywords:
   - issues
   - ticket management
   - project management
-version: 0.8.0
+version: 0.8.1
 author : StackStorm, Inc.
 email : info@stackstorm.com
