--- a/pack.yaml
+++ b/pack.yaml
@@ -7,5 +7,8 @@ keywords:
   - ticket management
   - project management
 version: 0.9.0
+python_versions:
+  - "2"
+  - "3"
 author : StackStorm, Inc.
 email : info@stackstorm.com
