--- a/actions/assign_issue.yaml
+++ b/actions/assign_issue.yaml
@@ -3,8 +3,12 @@ name: assign_issue
 runner_type: python-script
 description: Assigning an issue to a user.
 enabled: true
-entry_point: assign_issue.py
+entry_point: run.py
 parameters:
+  action:
+    default: assign_issue
+    immutable: true
+    type: string
   issue_key:
     type: string
     description: Issue key (e.g. PROJECT-1000).
