Changed description, because transition_issue action can use only transition id.

--- a/actions/transition_issue.yaml
+++ b/actions/transition_issue.yaml
@@ -11,5 +11,5 @@ parameters:
     required: true
   transition:
     type: string
-    description: Name of transition (e.g. Close, Start Progress, etc).
+    description: ID of transition (e.g. 11, 21, etc).
     required: true
