aligned config example with actual config issues?

--- a/jira.yaml.example
+++ b/jira.yaml.example
@@ -10,7 +10,7 @@ project: "MY_PROJECT"
 verify: True
 default_profile: "dev"
 profiles:
-  - name: "dev"
+  "dev":
     url: "https://dev.atlassian.net"
     rsa_cert_file: "/home/vagrant/jira.pem"
     auth_method: "basic"
@@ -18,7 +18,7 @@ profiles:
     password: "mypas"
     project: "MY_PROJECT"
     verify: True    
-  - name: "prod"
+  "prod":
     url: "https://prod.atlassian.net"
     rsa_cert_file: "/home/vagrant/jira.pem"
     auth_method: "oauth"
