--- a/actions/get_issue.yaml
+++ b/actions/get_issue.yaml
@@ -24,3 +24,14 @@ parameters:
     description: True to include custom fields.
     required: true
     default: false
+  include_components:
+    type: boolean
+    description: True to include custom fields.
+    required: true
+    default: false
+  include_subtasks:
+    type: boolean
+    description: True to include custom fields.
+    required: true
+    default: false
+
