Changed the linking of multiple issue functianlity with usage of multithreading to speed up the results

--- a/actions/bulk_link_issue.yaml
+++ b/actions/bulk_link_issue.yaml
@@ -25,4 +25,4 @@ parameters:
     type: string
     description: The type of link to create.
     required: true
-    default: relates
+    default: relates to
