--- a/actions/get_issue.yaml
+++ b/actions/get_issue.yaml
@@ -34,3 +34,8 @@ parameters:
     description: True to include custom fields.
     required: true
     default: false
+  include_links:
+    type: boolean
+    description: True to include linked issues.
+    required: true
+    default: false
