Add Dashboard Support: #72 Add `get_gadgets` Action
* The `get_gadgets` action just pulls the available list of gadgets from
the `jira` instance. This commit also includes a fix to the description
of the `remove_gadget` yaml.

--- a/actions/remove_gadget.yaml
+++ b/actions/remove_gadget.yaml
@@ -1,7 +1,7 @@
 ---
 name: remove_gadget
 runner_type: python-script
-description: Update a gadget on a dashboard.
+description: Remove a gadget from a dashboard.
 enabled: true
 entry_point: remove_gadget.py
 parameters:
