Add Dashboard Support: #72 Add `get_dashboard_gadgets` Action
* The `get_dashboard_gadgets` action differs from the
`get_available_gadgets` action in that, it targets a specific dashboard
and returns only the gadgets present on that dashboard.

--- a/actions/get_available_gadgets.yaml
+++ b/actions/get_available_gadgets.yaml
@@ -1,6 +1,6 @@
 ---
-name: get_gadgets
+name: get_available_gadgets
 runner_type: python-script
 description: Get a list of available gadgets.
 enabled: true
-entry_point: get_gadgets.py
+entry_point: get_available_gadgets.py
