--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -15,4 +15,4 @@ jobs:
       enable-common-libs: true
       #apt-cache-version: v0
       #py-cache-version: v0
-      python-version: '["3.8", "3.9", "3.10", "3.11"]'
+      python-version: '["3.8", "3.9"]'
