Add Dashboard Support #72: Update `release.yaml`
I just realized the `release.yaml` GHA also uses the upstream
`pack-build_and_test` workflow. It would have failed when an attempt was
released because of our now deprecating `python 3.6`. Updating this to
mirror the `build_and_test.yaml` workflow.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,6 +18,7 @@ jobs:
       enable-common-libs: true
       #apt-cache-version: v0
       #py-cache-version: v0
+      python-version: '["3.8", "3.9"]'
 
   tag_release:
     needs: build_and_test
