Add Dashboard Support: #72 Add dashboard related actions (#73)
* Add Dashboard Support: #72 - Create Dashboard

Added `create_dashboard` action.

* Add Dashboard Support: #72 Add Gadget Action

* Added `add_gadget` action. Allows the user to add a gadget to an
existing dashboard.

* Add Dashboard Support: #72 Add `update_dashboard` Action

* Added `update_dashboard` action. It accepts parameters for the update,
fetches the dashboard by `id`, runs the `update` method on the
`dashboard` resource and returns it's `raw` result (`json` result from
the API)

* Add Dashboard Support: #72 Add `update_gadget` Action

* Added `update_gadget` action to allow a user to modify an existing
gadget on a dashboard.

* Add Dashboard Support: #72 Add `delete_dashboard` Action

* Added an action to delete dashboards by `id`. The `jira` library only
returns the raw `requests` response in this case. The return is a
dictionary containing the response status code and any text that was
included with the response. The action fails if any status code other
than 204 is produced.

* Add Dashboard Support: #72 Add `remove_gadget` Action

* Added `remove_gadget` action to allow users to delete gadgets from
dashboards.

* Add Dashboard Support: #72 Add `get_gadgets` Action

* The `get_gadgets` action just pulls the available list of gadgets from
the `jira` instance. This commit also includes a fix to the description
of the `remove_gadget` yaml.

* Change `get_gadgets` to `get_available_gadgets`

This is more in keeping with the API.

* Add Dashboard Support: #72 Add `get_dashboard_gadgets` Action

* The `get_dashboard_gadgets` action differs from the
`get_available_gadgets` action in that, it targets a specific dashboard
and returns only the gadgets present on that dashboard.

* Add Dashboard Support: #72 Add `copy_dashboard` Action

* Added the `copy_dashboard` action.
* Updated some descriptions in `update_dashboard` and `create_dashboard`
ya

--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -15,3 +15,4 @@ jobs:
       enable-common-libs: true
       #apt-cache-version: v0
       #py-cache-version: v0
+      python-version: '["3.8", "3.9"]'
