Updating version, and cahnges along with fixing return statement

--- a/actions/get_issue.yaml
+++ b/actions/get_issue.yaml
@@ -41,6 +41,6 @@ parameters:
     default: false
   sanitize_formatting:
     type: boolean
-    description: True to remove jinja template artifacts.
+    description: When set to true removes jinja template artifacts.
     required: true
     default: false
