--- a/actions/get_issue.yaml
+++ b/actions/get_issue.yaml
@@ -39,3 +39,8 @@ parameters:
     description: True to include linked issues.
     required: true
     default: false
+  sanitize_formatting:
+    type: boolean
+    description: When set to true removes jinja template artifacts.
+    required: true
+    default: false
